QA_EC2_code/QA_sg/test_sg.tf

//return the security group name to assing to the ec2 instance
output "sg_name"{
    value = aws_security_group.test_traffic.id
}

resource "aws_security_group" "test_traffic" {
    name = "Allow TEST HTTP SSH"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "TCP"
        cidr_blocks = [ "0.0.0.0/0" ]
    } 

    ingress {
        from_port = 80
        to_port = 80
        protocol = "TCP"
        cidr_blocks = [ "0.0.0.0/0" ]
    } 

    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
}
